<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="input_text">text</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_sixth">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="action_minus">-</string>
    <string name="action_plus">+</string>
    <string name="action_multiplication">*</string>
    <string name="action_exept">/</string>
    <string name="action_result">=</string>
    <string name="action_ac">AC</string>

</resources>