<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgrey">

    <TextView

        android:id="@+id/input_text_firstNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/grey"
        android:maxLength="3"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/input_text_action"
        app:layout_constraintStart_toStartOf="@id/guideline6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/input_text_action"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/grey"
        android:maxLength="1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/input_text_secondNumber"
        app:layout_constraintStart_toEndOf="@id/input_text_firstNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/input_text_secondNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/grey"
        android:maxLength="3"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/guideline10"
        app:layout_constraintStart_toEndOf="@id/input_text_action"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_seven"
        style="@style/BaseButtonStyle"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black"
        android:text="@string/number_seven"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_four"
        app:layout_constraintEnd_toStartOf="@+id/button_eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <Button
        android:id="@+id/button_four"
        style="@style/BaseButtonStyle"
        android:text="@string/number_four"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_one"
        app:layout_constraintEnd_toStartOf="@+id/button_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_seven" />

    <Button
        android:id="@+id/button_one"
        style="@style/BaseButtonStyle"
        android:text="@string/number_one"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_zero"
        app:layout_constraintEnd_toStartOf="@+id/button_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_four" />

    <Button
        android:id="@+id/button_eight"
        style="@style/BaseButtonStyle"
        android:layout_marginTop="30dp"
        android:text="@string/number_eight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_five"
        app:layout_constraintEnd_toStartOf="@+id/button_nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_seven"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <Button
        android:id="@+id/button_five"
        style="@style/BaseButtonStyle"
        android:text="@string/number_five"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_two"
        app:layout_constraintEnd_toStartOf="@+id/button_sixth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_four"
        app:layout_constraintTop_toBottomOf="@id/button_eight" />

    <Button
        android:id="@+id/button_two"
        style="@style/BaseButtonStyle"
        android:text="@string/number_two"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_result"
        app:layout_constraintEnd_toStartOf="@+id/button_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_one"
        app:layout_constraintTop_toBottomOf="@id/button_five" />

    <Button
        android:id="@+id/button_nine"
        style="@style/BaseButtonStyle"
        android:layout_marginTop="30dp"
        android:text="@string/number_nine"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_sixth"
        app:layout_constraintEnd_toStartOf="@+id/button_AC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_eight"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <Button
        android:id="@+id/button_sixth"
        style="@style/BaseButtonStyle"
        android:text="@string/number_sixth"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_three"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_five"
        app:layout_constraintTop_toBottomOf="@id/button_nine" />

    <Button
        android:id="@+id/button_three"
        style="@style/BaseButtonStyle"
        android:text="@string/number_three"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_exept"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_two"
        app:layout_constraintTop_toBottomOf="@id/button_sixth" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_plus"
        style="@style/MathOpButtonStyle"
        android:text="@string/action_plus"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_sixth"
        app:layout_constraintTop_toBottomOf="@id/button_AC" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_AC"
        style="@style/MathOpButtonStyle"
        android:layout_marginTop="30dp"
        android:text="@string/action_ac"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_nine"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_minus"
        style="@style/MathOpButtonStyle"
        android:text="@string/action_minus"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_three"
        app:layout_constraintTop_toBottomOf="@id/button_plus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_multiplication"
        style="@style/MathOpButtonStyle"
        android:layout_marginBottom="50dp"
        android:text="@string/action_multiplication"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_exept"
        app:layout_constraintTop_toBottomOf="@id/button_minus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_exept"
        style="@style/MathOpButtonStyle"
        android:layout_marginBottom="50dp"
        android:text="@string/action_exept"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_multiplication"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_result"
        app:layout_constraintTop_toBottomOf="@id/button_three" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_result"
        style="@style/MathOpButtonStyle"
        android:layout_marginBottom="50dp"
        android:text="@string/action_result"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_exept"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_zero"
        app:layout_constraintTop_toBottomOf="@id/button_two" />

    <Button
        android:id="@+id/button_zero"
        style="@style/BaseButtonStyle"
        android:text="@string/number_zero"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/button_result"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_one" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="160dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="400dp" />


</androidx.constraintlayout.widget.ConstraintLayout>